--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -17,6 +17,8 @@ import Shoutout from '../../components/Shoutout.jsx';
 import Milestone from '../../components/Milestone.jsx';
 import Timeline from '../../components/Timeline.jsx';
 import IconBullet from '../../components/IconBullet.jsx';
+import ResourceCard from '../../components/ResourceCard.jsx';
+import InteractiveTaskCard from '../../components/InteractiveTaskCard.jsx';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
@@ -33,5 +35,26 @@ const { Content } = await render(post);
 ---
 
 <BlogPost {...post.data}>
-  <Content components={{ Meeting, Task, Blocker, ActionItem, StandUpSummary, Progress, Callout, CodeSnippet, Image, Quote, Idea, Shoutout, Milestone, Timeline, IconBullet }} />
+  <Content 
+    components={{ 
+      Meeting, 
+      Task, 
+      Blocker, 
+      ActionItem, 
+      StandUpSummary, 
+      Progress, 
+      Callout, 
+      CodeSnippet, 
+      Image, 
+      Quote, 
+      Idea, 
+      Shoutout, 
+      Milestone, 
+      Timeline, 
+      IconBullet, 
+      InteractiveTaskCard, 
+      ResourceCard,
+
+    }} 
+  />
 </BlogPost>
